move leapfrog.h to inst/include

--- a/README.Rmd
+++ b/README.Rmd
@@ -27,6 +27,10 @@ The name _leapfrog_ is in honor of [Professor](https://blogs.lshtm.ac.uk/alumni/
 
 *Note: the CCMPP model and implementation of Bayesian Population Reconstruction in TMB previously here have moved to a separate repository: https://www.github.com/mrc-ide/ccmpp.tmb*
 
+## Simulation model
+
+The simulation model is implemented in a header-only C++ library located in [`inst/include/leapfrog.h`](inst/include/leapfrog.h). This location allows the C++ code to be imported in other R packages via specifying `LinkingTo: leapfrog` in the `DESCRIPTION` file.
+
 ## Installation
 
 Install the development version from [GitHub](https://github.com/mrc-ide/leapfrog) via devtools:
