--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ options(tidyverse.quiet = TRUE)
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/mrc-ide/leapfrog/workflows/R-CMD-check/badge.svg)](https://github.com/mrc-ide/leapfrog/actions)
-[![Codecov test coverage](https://codecov.io/gh/mrc-ide/leapfrog/branch/master/graph/badge.svg)](https://codecov.io/gh/mrc-ide/leapfrog?branch=master)
+[![Codecov test coverage](https://codecov.io/gh/mrc-ide/leapfrog/branch/demproj-only/graph/badge.svg)](https://codecov.io/gh/mrc-ide/leapfrog?branch=demproj-only)
 <!-- badges: end -->
 
 Leapfrog is a multistate population projection model for demographic and HIV epidemic estimation.
@@ -26,6 +26,11 @@ Leapfrog is a multistate population projection model for demographic and HIV epi
 The name _leapfrog_ is in honor of [Professor](https://blogs.lshtm.ac.uk/alumni/2018/07/16/obituary-professor-basia-zaba/) Basia [Zaba](https://translate.google.co.uk/#view=home&op=translate&sl=pl&tl=en&text=%C5%BBaba).
 
 *Note: the CCMPP model and implementation of Bayesian Population Reconstruction in TMB previously here have moved to a separate repository: https://www.github.com/mrc-ide/ccmpp.tmb*
+
+
+## Branch _demproj-only_
+
+The branch _demproj-only_ contains code for only the demographic projection model as a simpler example for developing interfaces with fewer input and output arrays.
 
 ## Simulation model
 
@@ -35,74 +40,51 @@ The simulation model is callable in R via a wrapper function `leafrogR()` create
 
 ## Installation
 
-Install the development version from [GitHub](https://github.com/mrc-ide/leapfrog) via devtools:
+Install the development version from [GitHub](https://github.com/mrc-ide/leapfrog/tree/demproj-only) via devtools:
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("mrc-ide/leapfrog")
+devtools::install_github("mrc-ide/leapfrog@demproj-only")
 ```
 
 ## Example
 
-The file `pjnz/bwa2021_v6.13.pjnz` contains an example Spectrum file constructed
-from default country data for Botswana in Spectrum v2.13 (December 2021).
+The file `bwa_demproj-only_spectrum-v6.13_2022-02-12.PJNZ` contains an example Spectrum file constructed
+from default country data for Botswana in Spectrum v2.13 (December 2021) with _only DemProj_ activated.
 
 Prepare model inputs.
 
 ```{r example}
 library(leapfrog)
+pkgbuild::compile_dll(".", debug = FALSE)
+devtools::load_all(".")
 
-pjnz <- system.file("pjnz/bwa2021_v6.13.pjnz", package = "leapfrog")
+pjnz <- "tests/testdata/spectrum/v6.13/bwa_demproj-only_spectrum-v6.13_2022-02-12.PJNZ"
 
 demp <- prepare_leapfrog_demp(pjnz)
-hivp <- prepare_leapfrog_projp(pjnz)
 ```
 
 Simulate 'full' age group (single-year age) and 'coarse' age group (collapsed
 age groups) models.
 
 ```{r simulate_leapfrog}
-lsimF <- leapfrogR(demp, hivp, hiv_strat = "full")
-lsimC <- leapfrogR(demp, hivp, hiv_strat = "coarse")
+lsim <- leapfrogR(demp)
 ```
 
-Compare the HIV prevalence age 15-49 years and AIDS deaths 50+ years. Deaths 50+ 
-years are to show some noticeable divergence between the `"full"` and `"coarse"` 
-age group simulations.
+Compare population, deaths, and births to Spectrum outputs. The _leapfrog_ model does not produce birth or death outputs for the baseline year.
 
-```{r sim_prev}
+```{r demproj_outputs}
+specres <- eppasm::read_hivproj_output(pjnz)
 
-prevF <- colSums(lsimF$hivpop1[16:50,,],,2) / colSums(lsimF$totpop1[16:50,,],,2)
-prevC <- colSums(lsimC$hivpop1[16:50,,],,2) / colSums(lsimC$totpop1[16:50,,],,2)
+plot(1970:2030, colSums(lsim$totpop1,,2), type = "l", main = "Total population")
+lines(1970:2030, colSums(specres$totpop,,2), col = 2)
 
-deathsF <- colSums(lsimF$hivdeaths[51:81,,],,2)
-deathsC <- colSums(lsimC$hivdeaths[51:81,,],,2)
+plot(1970:2030, colSums(lsim$natdeaths,,2), type = "l", main = "Total non-AIDS deaths")
+lines(1970:2030, colSums(specres$natdeaths,,2), col = 2)
 
-plot(1970:2030, prevF, type = "l", main = "Prevalence 15-49")
-lines(1970:2030, prevC, col = 2)
-
-plot(1970:2030, deathsF, type = "l", main = "AIDS Deaths 50+ years")
-lines(1970:2030, deathsC, col = 2)
+plot(1970:2030, lsim$births, type = "l", main = "Births")
+lines(1970:2030, specres$births, col = 2)
 ``` 
-
-### Benchmarking 
-
-_Note: The function `devtools::load_all()` invokes `pkgbuild::compile_dll()`,
-which executes with default arguemnt `debug = TRUE`. This compiles the package 
-with `-O0` compiler optimisation flags. For benchmarking, make sure to install 
-the package or compile the DLL with `pkgbuild::compile_dll(debug = FALSE)`._
-
-```{r benchmarking}
-library(bench)
-library(eppasm)
-
-fp <- eppasm::prepare_directincid(pjnz)
-
-bench::mark(leapfrogR(demp, hivp, hiv_strat = "full"),
-            leapfrogR(demp, hivp, hiv_strat = "coarse"),
-            eppasm::simmod(fp),
-            check = FALSE)
-```
 
 ## Code design
 
